# weird-legacy

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  data.json  index.html  package.json  pg-setup.sql  style.css  vite.config.ts
.github/workflows/: release-tauri.yml  rust.yml  test-tauri.yml
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
desktop/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  app.css  config.ts  store.ts  utils.ts
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
desktop/src-tauri/src/: backends.rs  build.rs  commands.rs  error.rs  generator.rs  ipc.rs  main.rs  prelude.rs  server.rs  state.rs
desktop/src-tauri/src/backends/: filesystem.rs  github_pages.rs
desktop/src-tauri/src/utils/: mod.rs  zip.rs
desktop/src/bindings/: Content.ts  Link.ts  Profile.ts  User.ts
desktop/src/components/: Icon.svelte  Spinner.svelte
desktop/src/components/icons/: github.path  logout.path  rocket.path  x.path
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
desktop/src/routes/export/: +page.svelte
desktop/src/routes/publish/github/: +layout.svelte  +page.svelte  consts.ts  github-workflow.yaml
desktop/src/routes/publish/github/login/: +page.svelte
desktop/src/routes/publish/github/status/: +page.svelte
desktop/src/routes/user/: +page.svelte
desktop/template/: README.md  config.toml  index.html  pnpm-lock.yaml  svelte.config.js  theme.toml  vite.config.ts
desktop/template/_app/immutable/assets/: _layout.6be0c145.css  _layout.c0d5a8f3.css
desktop/template/content/about/: _index.md  biography.md  personality.md  relationships.md
desktop/template/sass/: _404.scss  _about.scss  _base.scss  _homepage.scss  _mixins.scss  _variables.scss  style.scss
desktop/template/src/: app.css
desktop/template/src/routes/: +page.svelte
desktop/template/static/: .htaccess
desktop/template/templates/: 404.html  about.html  base.html  index.html
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
frontend/src/pages/: create.rs  index.rs  linkpage.rs  mod.rs
src/: App.svelte  main.rs  services.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/templates/: create.rs  greet.rs  index.rs  links.rs  mod.rs
src/templates/default/: index.html  styles.css
template/: package.json  pnpm-lock.yaml
