[package]
name = "weirdv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features =["derive"] }
sycamore = {version = "0.8.2", features = ["ssr", "serde"]}
