[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6.2", features = ["sqlite", "any", "runtime-tokio-rustls", "json"] }
