[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = {version = "0.5.0"}
sycamore = { version = "0.8.2", features = ["serde", "suspense"] }
sycamore-router = "0.8.0"
common = {path = "../common"}
