[package]
name = "weird"
version = "0.3.1"
description = "Local-first website generator."
authors = ["Noah Too <krivahtoo@gmail.com>"]
license = "MIT"
repository = "https://github.com/commune-os/weird-tauri"
default-run = "weird"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
walkdir = "2.3.3"
zip = { version = "0.6.4", default-features = false, features = ["deflate", "time"] }

[dependencies]
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
log = "0.4.17"
walkdir = "2.3.3"
thiserror = "1.0.40"
ts-rs = "6.2.0"
mime_guess = "2.0.4"
tracing-subscriber = "0.3.17"
tiny_http = "0.12.0"
base64 = "0.21.2"
tracing = "0.1.37"
notify = "6.0.1"
toml = "0.7.6"

# Zola
site = { path = "../zola/components/site" }
errors = { path = "../zola/components/errors" }
libs = { path = "../zola/components/libs" }
config = { path = "../zola/components/config" }

[dependencies.tauri]
version = "1.4.1"
features = [
  "clipboard-write-text",
  "dialog",
  "http-request",
  "reqwest-client",
  "window-close",
  "window-create",
  "window-show"
]

[dependencies.zip]
version = "0.6.4"
default-features = false
features = ["deflate", "time"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
